# drf_celery_payments

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
payouts/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
payouts/migrations/: 0001_initial.py
payouts/tests/: test_payouts.py
